--- a/vsim_scripts/makefile
+++ b/vsim_scripts/makefile
@@ -10,7 +10,11 @@ com:
 	vlog -l com.log -work work +incdir+../rtl/ $(FLIST)
 
 sim:
+ifeq ($(wildcard wave.do),wave.do)
+	vsim -l sim.log -do "run -all" -do wave.do
+else
 	vsim -l sim.log -t ns -do "run -all"
+endif
 
 clean:
 	rm -rf 	./work/ transcript modelsim.ini vsim.wlf \
